--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.12.x
+ 
+    - name: Install dependencies
+      run: npm install
 
     - name: Build project
       run: npm run build
