--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Deploy to GitHub pages
       uses: crazy-max/ghaction-github-pages@v1.4.0
       with:
-        build-dir: out
+        build_dir: out
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
